dns-load-balance-approach/aws-route53/app/hello-service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: apigee-hello-app-nginx
  name: apigee-hello-service-nginx
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: apigee-hello-app
