dns-load-balance-approach/aws-route53/app/hello-ingress-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-ingress-nginx
spec:
  #tls:
  #- hosts:
  #  - hello.example.com
    #secretName: cafe-secret
  rules:
  - host: hello.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: apigee-hello-service-nginx
          servicePort: 80
